--- a/Task3.ipynb
+++ b/Task3.ipynb
@@ -657,7 +657,11 @@
             "Epoch 4: loss improved from 8.10648 to 7.93255, saving model to nextword1.h5\n",
             "277/277 [==============================] - 87s 314ms/step - loss: 7.9325 - lr: 0.0010\n",
             "Epoch 5/150\n",
-            " 58/277 [=====>........................] - ETA: 1:08 - loss: 7.7030"
+            "277/277 [==============================] - ETA: 0s - loss: 7.7388\n",
+            "Epoch 5: loss improved from 7.93255 to 7.73882, saving model to nextword1.h5\n",
+            "277/277 [==============================] - 87s 315ms/step - loss: 7.7388 - lr: 0.0010\n",
+            "Epoch 6/150\n",
+            " 16/277 [>.............................] - ETA: 1:21 - loss: 7.4449"
           ]
         }
       ],
